[package]
name = "rpc"
version = "0.1.0"
edition = "2018"
authors = ["Freezy Gem"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
backoff = { version = "0.3", features = ["tokio"] }
futures = "0.3"
jsonrpc-core = "18.0"
url = "2"
log = "0.4"
hex = "0.4"

web3 = "0.17"
ethereum-types = "0.12"
ethereum-tx-sign = "3.0"
